--- a/deploy/everoute.yaml
+++ b/deploy/everoute.yaml
@@ -2098,9 +2098,13 @@ rules:
   resources:
     - securitypolicies
     - globalpolicies
+    - endpoints
+    - endpoints/status
   verbs:
     - get
     - list
+    - update
+    - delete
     - watch
     - create
 - apiGroups:
@@ -2348,6 +2352,10 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: spec.nodeName
+            - name: NAMESPACE
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.namespace
           securityContext:
             privileged: true
           livenessProbe:
@@ -2468,6 +2476,11 @@ spec:
             - --enable-leader-election=true
             - --port=9443
             - -v=0
+          env:
+            - name: NAMESPACE
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.namespace
           livenessProbe:
             httpGet:
               scheme: HTTPS
