feat(cni): init local bridge for overlay

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -8,6 +8,18 @@ linters-settings:
   funlen:
     lines: 100
     statements: 80
+  depguard:
+    rules:
+      main:
+        files:
+          - $all
+          - "!$test"
+        allow:
+          - $gostd
+          - github.com
+          - k8s.io
+          - sigs.k8s.io
+        deny:
 
 run:
   timeout: 10m
@@ -22,7 +34,6 @@ linters:
   disable-all: true
   enable:
     - bodyclose
-    - deadcode
     - depguard
     - dogsled
     - dupl
@@ -34,7 +45,7 @@ linters:
     - gocyclo
     - gofmt
     - goimports
-    - golint
+    - revive
     - goprintffuncname
     - gosec
     - gosimple
@@ -47,10 +58,8 @@ linters:
     - nolintlint
     - rowserrcheck
     - staticcheck
-    - structcheck
     - stylecheck
     - typecheck
     - unconvert
     - unused
-    - varcheck
     - whitespace
