feat: support VRRP protocol
Signed-off-by: zwtop <wang.zhan@smartx.com>

--- a/deploy/chart/crds/security.everoute.io_endpoints.yaml
+++ b/deploy/chart/crds/security.everoute.io_endpoints.yaml
@@ -81,6 +81,7 @@ spec:
                       - UDP
                       - ICMP
                       - IPIP
+                      - VRRP
                       type: string
                   type: object
                 type: array
