--- a/deploy/everoute.yaml
+++ b/deploy/everoute.yaml
@@ -412,6 +412,7 @@ spec:
                         - UDP
                         - ICMP
                         - IPIP
+                        - VRRP
                         type: string
                     type: object
                   type: array
@@ -516,6 +517,7 @@ spec:
                         - UDP
                         - ICMP
                         - IPIP
+                        - VRRP
                         type: string
                     type: object
                   type: array
@@ -597,6 +599,7 @@ spec:
                         - UDP
                         - ICMP
                         - IPIP
+                        - VRRP
                         type: string
                     type: object
                   type: array
@@ -653,6 +656,7 @@ spec:
                         - UDP
                         - ICMP
                         - IPIP
+                        - VRRP
                         type: string
                     type: object
                   type: array
@@ -757,6 +761,7 @@ spec:
                       - UDP
                       - ICMP
                       - IPIP
+                      - VRRP
                       type: string
                   type: object
                 type: array
@@ -1246,13 +1251,13 @@ spec:
                               20,22-24,90.
                             type: string
                           protocol:
-                            description: The protocol (TCP, UDP or ICMP) which traffic
-                              must match.
+                            description: The ip protocol which traffic must match.
                             enum:
                             - TCP
                             - UDP
                             - ICMP
                             - IPIP
+                            - VRRP
                             type: string
                           type:
                             default: number
@@ -1654,13 +1659,13 @@ spec:
                               20,22-24,90.
                             type: string
                           protocol:
-                            description: The protocol (TCP, UDP or ICMP) which traffic
-                              must match.
+                            description: The ip protocol which traffic must match.
                             enum:
                             - TCP
                             - UDP
                             - ICMP
                             - IPIP
+                            - VRRP
                             type: string
                           type:
                             default: number
