--- a/deploy/chart/crds/group.everoute.io_groupmemberspatches.yaml
+++ b/deploy/chart/crds/group.everoute.io_groupmemberspatches.yaml
@@ -69,6 +69,7 @@ spec:
                         - UDP
                         - ICMP
                         - IPIP
+                        - VRRP
                         type: string
                     type: object
                   type: array
@@ -150,6 +151,7 @@ spec:
                         - UDP
                         - ICMP
                         - IPIP
+                        - VRRP
                         type: string
                     type: object
                   type: array
@@ -206,6 +208,7 @@ spec:
                         - UDP
                         - ICMP
                         - IPIP
+                        - VRRP
                         type: string
                     type: object
                   type: array
