build: allow disable auto server tls
Signed-off-by: zwtop <wang.zhan@smartx.com>

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -91,7 +91,7 @@ jobs:
           password: ${{ secrets.HARBOR_PUSH_TOKEN }}
 
       - name: Generate deploy yaml
-        run: helm template deploy/chart --include-crds --set image.tag=${{ needs.build.outputs.ReleaseTag }} > deploy/everoute.yaml
+        run: helm template deploy/chart --set image.tag=${{ needs.build.outputs.ReleaseTag }} > deploy/everoute.yaml
 
       - name: Create Release
         id: create_release
