--- a/.github/workflows/labeler.yaml
+++ b/.github/workflows/labeler.yaml
@@ -29,7 +29,7 @@ jobs:
             Please make sure you are NOT addressing multiple issues with one PR.
             Note this PR might be rejected due to its size.
           files_to_ignore: |
-            "deploy/chart/crds/*"
+            "deploy/chart/templates/crds/*"
             "*generated*.go"
             "*.pb.go"
             "pkg/client/*"
