--- a/deploy/chart/templates/agent/agent.yaml
+++ b/deploy/chart/templates/agent/agent.yaml
@@ -1,3 +1,4 @@
+{{ if .Values.deployment_enabled }}
 ---
 apiVersion: v1
 data:
@@ -187,3 +188,4 @@ spec:
             path: /run/xtables.lock
             type: FileOrCreate
           name: xtables-lock
+{{ end }}
