--- a/deploy/chart/templates/controller/controller.yaml
+++ b/deploy/chart/templates/controller/controller.yaml
@@ -1,3 +1,4 @@
+{{ if .Values.deployment_enabled }}
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -51,3 +52,4 @@ spec:
             periodSeconds: 10
             successThreshold: 1
             failureThreshold: 3
+{{ end }}
