--- a/deploy/everoute.yaml
+++ b/deploy/everoute.yaml
@@ -1,7 +1,51 @@
 ---
-# Source: crds/agent.everoute.io_agentinfos.yaml
-
+# Source: everoute/templates/agent/serviceaccount.yaml
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: everoute-agent
+  namespace: kube-system
 ---
+# Source: everoute/templates/controller/serviceaccount.yaml
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: everoute-controller
+  namespace: kube-system
+---
+# Source: everoute/templates/agent/agent.yaml
+apiVersion: v1
+data:
+  agentconfig.yaml: |
+    datapathConfig:
+      cnibr0: cnibr0
+    enableCNI: true
+    CNIConf:
+      localGwIP: 100.64.254.254
+      enableProxy: false
+  cni-conf.conflist: |
+    {
+        "cniVersion": "0.3.0",
+        "name": "everoute",
+        "plugins": [
+            {
+                "type": "everoute"
+            },
+            {
+                "type": "portmap",
+                "capabilities": {"portMappings": true}
+            }
+        ]
+    }
+kind: ConfigMap
+metadata:
+  annotations: {}
+  labels:
+    app: everoute
+  name: everoute-config-xu73od84d3
+  namespace: kube-system
+---
+# Source: everoute/templates/crds/agent.everoute.io_agentinfos.yaml
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
@@ -126,11 +170,8 @@ status:
     plural: ""
   conditions: []
   storedVersions: []
-
 ---
-# Source: crds/group.everoute.io_endpointgroups.yaml
-
----
+# Source: everoute/templates/crds/group.everoute.io_endpointgroups.yaml
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
@@ -326,11 +367,8 @@ status:
     plural: ""
   conditions: []
   storedVersions: []
-
 ---
-# Source: crds/group.everoute.io_groupmembers.yaml
-
----
+# Source: everoute/templates/crds/group.everoute.io_groupmembers.yaml
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
@@ -443,11 +481,8 @@ status:
     plural: ""
   conditions: []
   storedVersions: []
-
 ---
-# Source: crds/group.everoute.io_groupmemberspatches.yaml
-
----
+# Source: everoute/templates/crds/group.everoute.io_groupmemberspatches.yaml
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
@@ -675,11 +710,8 @@ status:
     plural: ""
   conditions: []
   storedVersions: []
-
 ---
-# Source: crds/security.everoute.io_endpoints.yaml
-
----
+# Source: everoute/templates/crds/security.everoute.io_endpoints.yaml
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
@@ -829,11 +861,8 @@ status:
     plural: ""
   conditions: []
   storedVersions: []
-
 ---
-# Source: crds/security.everoute.io_globalpolicies.yaml
-
----
+# Source: everoute/templates/crds/security.everoute.io_globalpolicies.yaml
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
@@ -897,11 +926,8 @@ status:
     plural: ""
   conditions: []
   storedVersions: []
-
 ---
-# Source: crds/security.everoute.io_securitypolicies.yaml
-
----
+# Source: everoute/templates/crds/security.everoute.io_securitypolicies.yaml
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
@@ -1905,11 +1931,8 @@ status:
     plural: ""
   conditions: []
   storedVersions: []
-
 ---
-# Source: crds/service.everoute.io_serviceports.yaml
-
----
+# Source: everoute/templates/crds/service.everoute.io_serviceports.yaml
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
@@ -1998,53 +2021,6 @@ status:
     plural: ""
   conditions: []
   storedVersions: []
-
----
-# Source: everoute/templates/agent/serviceaccount.yaml
-apiVersion: v1
-kind: ServiceAccount
-metadata:
-  name: everoute-agent
-  namespace: kube-system
----
-# Source: everoute/templates/controller/serviceaccount.yaml
-apiVersion: v1
-kind: ServiceAccount
-metadata:
-  name: everoute-controller
-  namespace: kube-system
----
-# Source: everoute/templates/agent/agent.yaml
-apiVersion: v1
-data:
-  agentconfig.yaml: |
-    datapathConfig:
-      cnibr0: cnibr0
-    enableCNI: true
-    CNIConf:
-      localGwIP: 100.64.254.254
-      enableProxy: false
-  cni-conf.conflist: |
-    {
-        "cniVersion": "0.3.0",
-        "name": "everoute",
-        "plugins": [
-            {
-                "type": "everoute"
-            },
-            {
-                "type": "portmap",
-                "capabilities": {"portMappings": true}
-            }
-        ]
-    }
-kind: ConfigMap
-metadata:
-  annotations: {}
-  labels:
-    app: everoute
-  name: everoute-config-xu73od84d3
-  namespace: kube-system
 ---
 # Source: everoute/templates/agent/role.yaml
 apiVersion: rbac.authorization.k8s.io/v1
@@ -2485,7 +2461,7 @@ webhooks:
     sideEffects: None
     clientConfig:
       # CaBundle must set as the ca for secret everoute-controller-tls.
-      caBundle:
+      caBundle: Cg==
       service:
         name: everoute-validator-webhook
         namespace: kube-system
