--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -93,13 +93,21 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        include:
-          - feature: Proxy
-            focus: NetworkPolicy|ClusterIP|clusterIP
-          - focus: NetworkPolicy
+        enable-proxy: [true, false]
+        encap-mode: ["", geneve]
     runs-on: [self-hosted, pod-k8s-e2e]
     steps:
       - uses: actions/checkout@v2
+
+      - name: set focus
+        run: |
+          if [[ "${{ matrix.enable-proxy }}" == "true" ]]; then
+            echo "focus=NetworkPolicy|ClusterIP|clusterIP" >> $GITHUB_ENV
+          else
+            echo "focus=NetworkPolicy" >> $GITHUB_ENV
+          fi
+      
+      - run: echo "${{ env.focus }}"
 
       - name: config PATH
         run: |
@@ -111,17 +119,9 @@ jobs:
 
       - name: install k8se2e binary
         run: sudo mkdir -p /runner/_work/everoute/everoute/k8se2e && sudo cp -r /home/runner/k8se2e/bin/ /runner/_work/everoute/everoute/k8se2e/bin/
-
-      - name: specific proxy related param
-        if: ${{ matrix.feature == 'Proxy'}}
-        run: sed -i s#enableProxy:\ false#enableProxy:\ true#g deploy/chart/values.yaml
       
       - name: generate everoute cni deploy yaml
-        run: |
-          sed -i s#everoute/release#registry.smtx.io/everoute/everoute_release#g deploy/chart/values.yaml
-          sed -i s#latest#${{ github.sha }}#g deploy/chart/values.yaml
-          cat deploy/chart/values.yaml
-          make yaml
+        run: helm template deploy/chart --set CNIConf.encapMode=${{ matrix.encap-mode }},CNIConf.enableProxy=${{ matrix.enable-proxy }},image.repository=registry.smtx.io/everoute/everoute_release,image.tag=${{ github.sha }} > deploy/everoute.yaml
 
       - name: test kubectl connect to sks
         run: kubectl get crd --kubeconfig /home/runner/sksconfig/sksconfig | grep smart
@@ -160,17 +160,19 @@ jobs:
           kubectl taint node node-role.kubernetes.io/control-plane=:NoSchedule- --all
 
       - name: deploy everoute cni
-        run: kubectl apply -f deploy/everoute.yaml
+        run: |
+          cat deploy/everoute.yaml
+          kubectl apply -f deploy/everoute.yaml
 
       - name: wait k8s cluster ready
         run: |
-          kubectl --kubeconfig /home/runner/sksconfig/sksconfig wait --for=jsonpath='{.status.phase}'=Ready KubeSmartCluster/${{ env.CLUSTER_NAME }} --timeout=5m
-          kubectl wait --for=condition=Ready nodes --all --timeout=5m
+          kubectl --kubeconfig /home/runner/sksconfig/sksconfig wait --for=jsonpath='{.status.phase}'=Ready KubeSmartCluster/${{ env.CLUSTER_NAME }} --timeout=10m
+          kubectl wait --for=condition=Ready nodes --all --timeout=10m
           kubectl get nodes -owide
 
       - name: run test cases
         timeout-minutes: 40
-        run: ./k8se2e/bin/ginkgo -nodes=10 --skip="SCTP" --focus="${{ matrix.focus }}" ./k8se2e/bin/e2e.test -- --disable-log-dump --provider="skeleton" --kubeconfig=/home/runner/.kube/config
+        run: ./k8se2e/bin/ginkgo -nodes=10 --skip="SCTP" --focus="${{ env.focus }}" ./k8se2e/bin/e2e.test -- --disable-log-dump --provider="skeleton" --kubeconfig=/home/runner/.kube/config
 
       - name: delete test k8s cluster
         id: delenv
