--- a/deploy/chart/templates/controller/controller.yaml
+++ b/deploy/chart/templates/controller/controller.yaml
@@ -49,3 +49,8 @@ spec:
             periodSeconds: 10
             successThreshold: 1
             failureThreshold: 3
+          resources:
+            requests:
+              memory: 64Mi
+            limits:
+              memory: 128Mi
