--- a/deploy/everoute.yaml
+++ b/deploy/everoute.yaml
@@ -2031,6 +2031,11 @@ spec:
             periodSeconds: 10
             successThreshold: 1
             failureThreshold: 5
+          resources:
+            requests:
+              memory: 256Mi
+            limits:
+              memory: 512Mi
         - name: everoute-agent
           image: everoute/release:latest
           imagePullPolicy: IfNotPresent
@@ -2078,6 +2083,11 @@ spec:
               mountPath: /tmp
             - name: xtables-lock
               mountPath: /run/xtables.lock
+          resources:
+            requests:
+              memory: 64Mi
+            limits:
+              memory: 128Mi
       tolerations:
         - key: CriticalAddonsOnly
           operator: Exists
@@ -2173,6 +2183,11 @@ spec:
             periodSeconds: 10
             successThreshold: 1
             failureThreshold: 3
+          resources:
+            requests:
+              memory: 64Mi
+            limits:
+              memory: 128Mi
 ---
 # Source: everoute/templates/controller/webhook.yaml
 apiVersion: admissionregistration.k8s.io/v1
