--- a/deploy/chart/templates/agent/agent.yaml
+++ b/deploy/chart/templates/agent/agent.yaml
@@ -68,6 +68,11 @@ spec:
             periodSeconds: 10
             successThreshold: 1
             failureThreshold: 5
+          resources:
+            requests:
+              memory: 256Mi
+            limits:
+              memory: 512Mi
         - name: everoute-agent
           image: {{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}
           imagePullPolicy: IfNotPresent
@@ -118,6 +123,11 @@ spec:
               mountPath: /tmp
             - name: xtables-lock
               mountPath: /run/xtables.lock
+          resources:
+            requests:
+              memory: 64Mi
+            limits:
+              memory: 128Mi
       tolerations:
         - key: CriticalAddonsOnly
           operator: Exists
