--- a/deploy/chart/templates/controller/controller.yaml
+++ b/deploy/chart/templates/controller/controller.yaml
@@ -60,10 +60,7 @@ spec:
               mountPath: /var/lib/everoute/controllerconfig.yaml
               subPath: controllerconfig.yaml
           resources:
-            requests:
-              memory: 64Mi
-            limits:
-              memory: 128Mi
+            {{- toYaml .Values.quota.controller | nindent 12 }}  
       volumes:
         - configMap:
             name: everoute-config-xu73od84d3
