--- a/deploy/chart/values.yaml
+++ b/deploy/chart/values.yaml
@@ -8,3 +8,20 @@ image:
 
 bridgeName: cnibr0
 localGwIP: 100.64.254.254
+
+quota:
+  initAgent:
+    requests:
+      memory: 256Mi
+    limits:
+      memory: 512Mi
+  agent:
+    requests:
+      memory: 64Mi
+    limits:
+      memory: 128Mi
+  controller:
+    requests:
+      memory: 64Mi
+    limits:
+      memory: 128Mi
