--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -7,6 +7,9 @@ on:
     branches:
       - main
 
+env:
+  cache-registry: 'docker-registry-cache.docker-registry.svc:5000'
+
 jobs:
   build:
     runs-on: [self-hosted, pod]
@@ -21,12 +24,6 @@ jobs:
       - uses: actions/checkout@v2
 
       - uses: docker/setup-qemu-action@v2
-
-      - run: docker context create build
-
-      - uses: docker/setup-buildx-action@v2
-        with:
-          endpoint: build
 
       - name: Login docker hub
         uses: docker/login-action@v2
@@ -49,6 +46,8 @@ jobs:
             registry.smtx.io/everoute/release:${{ env.IMAGE_TAG }}
           platforms: linux/amd64,linux/arm64
           push: true
+          cache-from: type=registry,ref=${{ env.cache-registry }}/everoute/cni/build
+          cache-to: type=registry,ref=${{ env.cache-registry }}/everoute/cni/build, mod=max
 
       - name: Check if tag is a release tag
         run: |
