--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -5,7 +5,10 @@ on:
     tags:
       - "**"
     branches:
-      - main
+      - zj-test-build
+
+env:
+  cache-registry: 'docker-registry-cache.docker-registry.svc:5000'
 
 jobs:
   build:
@@ -13,7 +16,7 @@ jobs:
     steps:
       - run: echo "IMAGE_TAG=${GITHUB_REF/refs\/tags\//}" >> $GITHUB_ENV
 
-      - if: ${{ github.ref == 'refs/heads/main' }}
+      - if: ${{ github.ref == 'refs/heads/zj-test-build' }}
         run: echo "IMAGE_TAG=latest" >> $GITHUB_ENV
 
       - run: echo "push image to everoute/release:${{ env.IMAGE_TAG }}"
@@ -21,12 +24,6 @@ jobs:
       - uses: actions/checkout@v2
 
       - uses: docker/setup-qemu-action@v2
-
-      - run: docker context create build
-
-      - uses: docker/setup-buildx-action@v2
-        with:
-          endpoint: build
 
       - name: Login docker hub
         uses: docker/login-action@v2
@@ -49,6 +46,8 @@ jobs:
             registry.smtx.io/everoute/release:${{ env.IMAGE_TAG }}
           platforms: linux/amd64,linux/arm64
           push: true
+          cache-from: type=registry,ref=${{ env.cache-registry }}/everoute/cni/build
+          cache-to: type=registry,ref=${{ env.cache-registry }}/everoute/cni/build, mod=max
 
       - name: Check if tag is a release tag
         run: |
