--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -5,7 +5,10 @@ on:
     tags:
       - "**"
     branches:
-      - main
+      - zj-test-build
+
+env:
+  cache-registry: 'docker-registry-cache.docker-registry.svc:5000'
 
 jobs:
   build:
@@ -13,7 +16,7 @@ jobs:
     steps:
       - run: echo "IMAGE_TAG=${GITHUB_REF/refs\/tags\//}" >> $GITHUB_ENV
 
-      - if: ${{ github.ref == 'refs/heads/main' }}
+      - if: ${{ github.ref == 'refs/heads/zj-test-build' }}
         run: echo "IMAGE_TAG=latest" >> $GITHUB_ENV
 
       - run: echo "push image to everoute/release:${{ env.IMAGE_TAG }}"
@@ -49,6 +52,8 @@ jobs:
             registry.smtx.io/everoute/release:${{ env.IMAGE_TAG }}
           platforms: linux/amd64,linux/arm64
           push: true
+          cache-from: type=registry,ref=${{ env.cache-registry }}/everoute/cni/build
+          cache-to: type=registry,ref=${{ env.cache-registry }}/everoute/cni/build, mod=max
 
       - name: Check if tag is a release tag
         run: |
@@ -89,7 +94,7 @@ jobs:
           registry: registry.smtx.io
           username: ${{ secrets.HARBOR_PUSH_USERNAME }}
           password: ${{ secrets.HARBOR_PUSH_TOKEN }}
-
+          
       - name: Generate deploy yaml
         run: helm template deploy/chart --set image.tag=${{ needs.build.outputs.ReleaseTag }} > deploy/everoute.yaml
 
