--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -5,10 +5,7 @@ on:
     tags:
       - "**"
     branches:
-      - zj-test-build
-
-env:
-  cache-registry: 'docker-registry-cache.docker-registry.svc:5000'
+      - main
 
 jobs:
   build:
@@ -16,7 +13,7 @@ jobs:
     steps:
       - run: echo "IMAGE_TAG=${GITHUB_REF/refs\/tags\//}" >> $GITHUB_ENV
 
-      - if: ${{ github.ref == 'refs/heads/zj-test-build' }}
+      - if: ${{ github.ref == 'refs/heads/main' }}
         run: echo "IMAGE_TAG=latest" >> $GITHUB_ENV
 
       - run: echo "push image to everoute/release:${{ env.IMAGE_TAG }}"
@@ -25,11 +22,11 @@ jobs:
 
       - uses: docker/setup-qemu-action@v2
 
-      # - run: docker context create build
+      - run: docker context create build
 
-      # - uses: docker/setup-buildx-action@v2
-      #   with:
-      #     endpoint: build
+      - uses: docker/setup-buildx-action@v2
+        with:
+          endpoint: build
 
       - name: Login docker hub
         uses: docker/login-action@v2
@@ -52,8 +49,6 @@ jobs:
             registry.smtx.io/everoute/release:${{ env.IMAGE_TAG }}
           platforms: linux/amd64,linux/arm64
           push: true
-          cache-from: type=registry,ref=${{ env.cache-registry }}/everoute/cni/build
-          cache-to: type=registry,ref=${{ env.cache-registry }}/everoute/cni/build, mod=max
 
       - name: Check if tag is a release tag
         run: |
