--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,27 +6,17 @@ on:
       - '**'
 
   push:
-    branches: [ main, release-1.0, zj-test-build ]
+    branches: [ main, release-1.0 ]
 
   schedule:
     # 7:00 UTC+8
     - cron: "0 23 * * *"
 
-env:
-  cache-registry: 'docker-registry-cache.docker-registry.svc:5000'
-
 jobs:
   build-unit-test-image:
-    runs-on: [self-hosted, pod]
+    runs-on: [self-hosted, build]
     steps:
       - uses: actions/checkout@v2
-
-      - name: Login registry.smtx.io
-        uses: docker/login-action@v2
-        with:
-          registry: registry.smtx.io
-          username: ${{ secrets.HARBOR_PUSH_USERNAME }}
-          password: ${{ secrets.HARBOR_PUSH_TOKEN }}
 
       - name: build unit-test image
         uses: docker/build-push-action@v4
@@ -35,8 +25,6 @@ jobs:
           tags: registry.smtx.io/everoute/unit-test
           context: ./build/images/unit-test/
           push: true
-          cache-from: type=registry,ref=${{ env.cache-registry }}/everoute/cni/unit
-          cache-to: type=registry,ref=${{ env.cache-registry }}/everoute/cni/unit, mod=max
 
   pr-check:
     needs: [build-unit-test-image, static-check, generate-check]
@@ -55,6 +43,7 @@ jobs:
 
   static-check:
     runs-on: [ubuntu-20.04]
+    if: ${{ github.event_name == 'pull_request' }}
     steps:
       - uses: actions/setup-go@v3
         with:
@@ -66,7 +55,6 @@ jobs:
         uses: webiny/action-conventional-commits@v1.1.0
 
       - name: Check spelling
-        if: ${{ github.event_name == 'pull_request' }}
         uses: crate-ci/typos@v1.0.4
 
       - name: Check golang lint
@@ -88,16 +76,9 @@ jobs:
         run: sudo make docker-e2e-test
   
   build-k8s-e2e-image:
-    runs-on: [self-hosted, pod]
+    runs-on: [self-hosted, build]
     steps:
       - uses: actions/checkout@v2
-
-      - name: Login registry.smtx.io
-        uses: docker/login-action@v2
-        with:
-          registry: registry.smtx.io
-          username: ${{ secrets.HARBOR_PUSH_USERNAME }}
-          password: ${{ secrets.HARBOR_PUSH_TOKEN }}
 
       - name: build everoute image
         uses: docker/build-push-action@v4
@@ -106,8 +87,6 @@ jobs:
           tags: registry.smtx.io/everoute/everoute_release:${{ github.sha }}
           context: .
           push: true
-          cache-from: type=registry,ref=${{ env.cache-registry }}/everoute/cni/build
-          cache-to: type=registry,ref=${{ env.cache-registry }}/everoute/cni/build, mod=max
 
   run-k8s-e2e:
     needs: [build-k8s-e2e-image, static-check, generate-check, pr-check]
@@ -127,6 +106,8 @@ jobs:
           else
             echo "focus=NetworkPolicy" >> $GITHUB_ENV
           fi
+      
+      - run: echo "${{ env.focus }}"
 
       - name: config PATH
         run: |
