--- a/deploy/chart/templates/config.yaml
+++ b/deploy/chart/templates/config.yaml
@@ -16,6 +16,8 @@ data:
       {{- end}}
       # specified pod mtu, default value is 0, when mtu=0, the pod mtu will set according to node mtu
       mtu: {{ .Values.CNIConf.mtu }}
+      # specified encap vni, only valid when encapMode isn't empty, default is 5000 
+      vni: {{ .Values.CNIConf.vni }}
   cni-conf.conflist: |
     {
         "cniVersion": "0.3.0",
