--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,21 +12,11 @@ on:
     # 7:00 UTC+8
     - cron: "0 23 * * *"
 
-env:
-  cache-registry: 'docker-registry-cache.docker-registry.svc:5000'
-
 jobs:
   build-unit-test-image:
-    runs-on: [self-hosted, pod]
+    runs-on: [self-hosted, build]
     steps:
       - uses: actions/checkout@v2
-
-      - name: Login registry.smtx.io
-        uses: docker/login-action@v2
-        with:
-          registry: registry.smtx.io
-          username: ${{ secrets.HARBOR_PUSH_USERNAME }}
-          password: ${{ secrets.HARBOR_PUSH_TOKEN }}
 
       - name: build unit-test image
         uses: docker/build-push-action@v4
@@ -35,8 +25,6 @@ jobs:
           tags: registry.smtx.io/everoute/unit-test
           context: ./build/images/unit-test/
           push: true
-          cache-from: type=registry,ref=${{ env.cache-registry }}/everoute/cni/unit
-          cache-to: type=registry,ref=${{ env.cache-registry }}/everoute/cni/unit, mod=max
 
   pr-check:
     needs: [build-unit-test-image, static-check, generate-check]
@@ -89,16 +77,9 @@ jobs:
         run: sudo make docker-e2e-test
   
   build-k8s-e2e-image:
-    runs-on: [self-hosted, pod]
+    runs-on: [self-hosted, build]
     steps:
       - uses: actions/checkout@v2
-
-      - name: Login registry.smtx.io
-        uses: docker/login-action@v2
-        with:
-          registry: registry.smtx.io
-          username: ${{ secrets.HARBOR_PUSH_USERNAME }}
-          password: ${{ secrets.HARBOR_PUSH_TOKEN }}
 
       - name: build everoute image
         uses: docker/build-push-action@v4
@@ -107,8 +88,6 @@ jobs:
           tags: registry.smtx.io/everoute/everoute_release:${{ github.sha }}
           context: .
           push: true
-          cache-from: type=registry,ref=${{ env.cache-registry }}/everoute/cni/build
-          cache-to: type=registry,ref=${{ env.cache-registry }}/everoute/cni/build, mod=max
 
   run-k8s-e2e:
     needs: [build-k8s-e2e-image, static-check, generate-check, pr-check]
