feat: upgrade k8s version to 0.27.3, controller-runtime version to v0.15.2, go version to 1.19

--- a/.typos.toml
+++ b/.typos.toml
@@ -1,4 +1,6 @@
 [files]
 extend-exclude = [
     "deploy/crds",
-    "deploy/everoute.yaml"]
+    "deploy/everoute.yaml",
+    "go.sum",
+    "go.mod"]
