--- a/deploy/chart/templates/controller/controller.yaml
+++ b/deploy/chart/templates/controller/controller.yaml
@@ -29,6 +29,8 @@ spec:
       tolerations:
         - key: node-role.kubernetes.io/master
           effect: NoSchedule
+        - key: node-role.kubernetes.io/control-plane
+          effect: NoSchedule
         - key: CriticalAddonsOnly
           operator: Exists
       serviceAccountName: everoute-controller
