--- a/deploy/everoute.yaml
+++ b/deploy/everoute.yaml
@@ -2468,6 +2468,8 @@ spec:
       tolerations:
         - key: node-role.kubernetes.io/master
           effect: NoSchedule
+        - key: node-role.kubernetes.io/control-plane
+          effect: NoSchedule
         - key: CriticalAddonsOnly
           operator: Exists
       serviceAccountName: everoute-controller
