fix: send arp request before ip timeout
Signed-off-by: zwtop <wang.zhan@smartx.com>

--- a/deploy/chart/templates/crds/agent.everoute.io_agentinfos.yaml
+++ b/deploy/chart/templates/crds/agent.everoute.io_agentinfos.yaml
@@ -82,8 +82,16 @@ spec:
                                   type: object
                                 ipmap:
                                   additionalProperties:
-                                    format: date-time
-                                    type: string
+                                    properties:
+                                      updateTime:
+                                        format: date-time
+                                        type: string
+                                      vlanTag:
+                                        type: integer
+                                    required:
+                                    - updateTime
+                                    - vlanTag
+                                    type: object
                                   type: object
                                 mac:
                                   type: string
