--- a/deploy/everoute.yaml
+++ b/deploy/everoute.yaml
@@ -141,8 +141,16 @@ spec:
                                   type: object
                                 ipmap:
                                   additionalProperties:
-                                    format: date-time
-                                    type: string
+                                    properties:
+                                      updateTime:
+                                        format: date-time
+                                        type: string
+                                      vlanTag:
+                                        type: integer
+                                    required:
+                                    - updateTime
+                                    - vlanTag
+                                    type: object
                                   type: object
                                 mac:
                                   type: string
@@ -2477,6 +2485,7 @@ spec:
           args:
             - -v=0
             - --metrics-addr=127.0.0.1:30002
+            - --disable-probe-timeout-ip
           env:
             - name: NODE_NAME
               valueFrom:
