--- a/deploy/chart/templates/agent/agent.yaml
+++ b/deploy/chart/templates/agent/agent.yaml
@@ -106,6 +106,7 @@ spec:
           args:
             - -v=0
             - --metrics-addr=127.0.0.1:30002
+            - --disable-probe-timeout-ip
           env:
             - name: NODE_NAME
               valueFrom:
