--- a/deploy/everoute.yaml
+++ b/deploy/everoute.yaml
@@ -769,6 +769,8 @@ spec:
                 description: 'Gateway must a valid IP in Subnet nolint: lll'
                 pattern: ^(((([1]?\d)?\d|2[0-4]\d|25[0-5])\.){3}(([1]?\d)?\d|2[0-4]\d|25[0-5]))|([\da-fA-F]{1,4}(\:[\da-fA-F]{1,4}){7})|(([\da-fA-F]{1,4}:){0,5}::([\da-fA-F]{1,4}:){0,5}[\da-fA-F]{1,4})$
                 type: string
+              private:
+                type: boolean
               subnet:
                 description: 'Subnet is the total L2 network, nolint: lll'
                 pattern: ^(?:(?:[0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}(?:[0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\/([1-9]|[1-2]\d|3[0-2])$
